--- a/style/main.css
+++ b/style/main.css
@@ -2,17 +2,20 @@
     font-family: 'pokemon classic';
     src: url(../font/pokemon-classic.ttf);
 }
+
 :root {
     --white: rgb(224, 224, 224);
     --container-color: rgb(238, 64, 53);
     --bottom-color: rgb(236, 236, 236);
 }
+
 * {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
     color: inherit;
 }
+
 body {
     /* overflow-y: hidden; */
     background: rgb(68, 68, 68);
@@ -43,12 +46,14 @@ body {
 .title-container {
     background: var(--container-color) linear-gradient(180deg, rgba(0,0,0,0) 0%, rgba(0,0,0,0) 60%, rgba(0,0,0,0.2) 100%);
 }
+
 .title {
     margin: 0;
     padding: 2% 0;
     font-size: 1.5rem;
     text-align: center;
 }
+
 .white-part {
     height: 1.5rem;
     background: var(--bottom-color) linear-gradient(180deg, rgba(255,255,255,0.2) 0%, rgba(0, 0, 0, 0.2) 80%, rgba(0,0,0,0.2) 100%);
@@ -57,7 +62,59 @@ body {
 }
 
 /* Main */
+
 .main {
-    background-color: blue;
-    min-height: 83vh;
+    display: flex;
+    justify-content: space-between;
+    align-items: stretch;
+    padding: 1.5rem 1rem 0;
+}
+
+/* Columns */
+
+.column {
+    flex: 1;
+}
+
+.column-title-container {
+    display: flex;
+}
+
+.column-title {
+    width: auto;
+    margin: 0 1rem;
+    padding: 1rem 5rem 1rem 1rem;
+    font-size: 1rem;
+    border-bottom: 0.25rem solid var(--white);
+}
+
+.separator {
+    padding: 0.3rem;
+    background: var(--bottom-color) linear-gradient(90deg, rgba(255,255,255,0.2) 0%, rgba(0, 0, 0, 0.2) 80%, rgba(0,0,0,0.2) 100%);
+    border-radius: 0.25rem;
+}
+
+.types-container {
+    min-height: 75vh;
+    padding: 0 2rem;
+    display: flex;
+}
+
+.types-column {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.type {
+    width: 10rem;
+    margin: 0 2rem;
+    padding: 0.25rem 2rem;
+    background: var(--bottom-color) linear-gradient(180deg, rgba(255,255,255,0.2) 0%, rgba(0, 0, 0, 0.2) 80%, rgba(0,0,0,0.2) 100%);
+    border-radius: 100rem;
+    box-shadow: 0 0.25rem 0 0 rgba(0,0,0,0.2);
+    font-size: 0.75em;
+    text-align: center;
 }
