--- a/style/main.css
+++ b/style/main.css
@@ -96,25 +96,34 @@ body {
 
 .types-container {
     min-height: 75vh;
-    padding: 0 2rem;
+    padding: 1rem;
     display: flex;
-}
-
-.types-column {
-    flex: 1;
-    display: flex;
-    flex-direction: column;
     justify-content: space-evenly;
+    flex-wrap: wrap;
     align-items: center;
 }
 
 .type {
-    width: 10rem;
+    --color: rgb(104, 104, 104);
+    width: 7rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     margin: 0 2rem;
     padding: 0.25rem 2rem;
-    background: var(--bottom-color) linear-gradient(180deg, rgba(255,255,255,0.2) 0%, rgba(0, 0, 0, 0.2) 80%, rgba(0,0,0,0.2) 100%);
+    background: var(--color) linear-gradient(180deg, rgba(255,255,255,0.2) 0%, rgba(0, 0, 0, 0.2) 80%, rgba(0,0,0,0.2) 100%);
     border-radius: 100rem;
     box-shadow: 0 0.25rem 0 0 rgba(0,0,0,0.2);
     font-size: 0.75em;
     text-align: center;
+    text-transform: capitalize;
+    &.active {
+        --color: var(--type-color);
+    }
+}
+
+.selector .type:hover {
+    cursor: pointer;
+    scale: 1.1;
+    border: 1px solid var(--white);
 }
