--- a/style/main.css
+++ b/style/main.css
@@ -105,13 +105,15 @@ body {
 
 .type {
     --color: rgb(104, 104, 104);
-    width: 7rem;
+    --border-color: rgb(59, 59, 59);
+    width: 30%;
     display: flex;
     justify-content: center;
     align-items: center;
     margin: 0 2rem;
     padding: 0.25rem 2rem;
     background: var(--color) linear-gradient(180deg, rgba(255,255,255,0.2) 0%, rgba(0, 0, 0, 0.2) 80%, rgba(0,0,0,0.2) 100%);
+    border: 1px solid var(--border-color);
     border-radius: 100rem;
     box-shadow: 0 0.25rem 0 0 rgba(0,0,0,0.2);
     font-size: 0.75em;
@@ -125,5 +127,5 @@ body {
 .selector .type:hover {
     cursor: pointer;
     scale: 1.1;
-    border: 1px solid var(--white);
+    --border-color: var(--white);
 }
