--- a/style/main.css
+++ b/style/main.css
@@ -55,7 +55,7 @@ body {
 }
 
 .white-part {
-    height: 1.5rem;
+    height: 3vh;
     background: var(--bottom-color) linear-gradient(180deg, rgba(255,255,255,0.2) 0%, rgba(0, 0, 0, 0.2) 80%, rgba(0,0,0,0.2) 100%);
     border-radius: 50rem;
     transform: translateY(50%)
@@ -67,7 +67,7 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: stretch;
-    padding: 1.5rem 1rem 0;
+    padding-top: 1.5rem;
 }
 
 /* Columns */
@@ -84,24 +84,25 @@ body {
 }
 
 .column-title {
-    width: auto;
+    width: 50%;
     margin: 0 1rem;
-    padding: 1rem 5rem 1rem 1rem;
+    padding: 1rem;
     font-size: 1rem;
     border-bottom: 0.25rem solid var(--white);
 }
 
 .button {
     --border-color: rgba(0, 0, 0, 0.8);
+    --button-color: rgb(104, 104, 104);
     display: flex;
     justify-content: center;
     align-items: center;
     padding: 0.25rem;
-    background-color: rgb(104, 104, 104);
+    background: var(--button-color) linear-gradient(180deg, rgba(0,0,0,0) 0%, rgba(0,0,0,0) 60%, rgba(0,0,0,0.2) 100%);
     border: 1px solid var(--border-color);
     border-radius: 0.5rem;
     font: inherit;
-    font-size: 0.5rem;
+    font-size: 0.65rem;
     cursor: pointer;
     &:hover {
         --border-color: var(--white);
@@ -110,21 +111,17 @@ body {
 }
 
 .recomend-types.button {
-    padding: 0.5rem;
-    background-color: var(--container-color);
+    --button-color: var(--container-color);
+    /* padding: 0.5rem; */
 }
 
-.reset-icon {
+.icon {
     --size: 1.5rem;
     width: var(--size);
     height: var(--size);
     & * {
         fill: var(--white);
     }
-}
-
-.recomend-types-button {
-
 }
 
 .separator {
@@ -145,11 +142,10 @@ body {
 .type {
     --color: rgb(104, 104, 104);
     --border-color: rgb(59, 59, 59);
-    width: 30%;
+    width: 35%;
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: 0 2rem;
     padding: 0.25rem 2rem;
     background: var(--color) linear-gradient(180deg, rgba(255,255,255,0.2) 0%, rgba(0, 0, 0, 0.2) 80%, rgba(0,0,0,0.2) 100%);
     border: 1px solid var(--border-color);
