--- a/style/main.css
+++ b/style/main.css
@@ -5,7 +5,8 @@
 
 :root {
     --white: rgb(224, 224, 224);
-    --container-color: rgb(238, 64, 53);
+    --primary-color: rgb(238, 64, 53);
+    --secondary-color: rgb(104, 104, 104);
     --bottom-color: rgb(236, 236, 236);
 }
 
@@ -44,7 +45,7 @@ body {
 /* Title */
 
 .title-container {
-    background: var(--container-color) linear-gradient(180deg, rgba(0,0,0,0) 0%, rgba(0,0,0,0) 60%, rgba(0,0,0,0.2) 100%);
+    background: var(--primary-color) linear-gradient(180deg, rgba(0,0,0,0) 0%, rgba(0,0,0,0) 60%, rgba(0,0,0,0.2) 100%);
 }
 
 .title {
@@ -111,7 +112,7 @@ body {
 }
 
 .recomend-types.button {
-    --button-color: var(--container-color);
+    --button-color: var(--primary-color);
     /* padding: 0.5rem; */
 }
 
@@ -140,7 +141,7 @@ body {
 }
 
 .type {
-    --color: rgb(104, 104, 104);
+    --color: var(--secondary-color);
     --border-color: rgb(59, 59, 59);
     width: 35%;
     display: flex;
@@ -170,4 +171,60 @@ body {
     cursor: pointer;
     scale: 1.1;
     --border-color: var(--white);
+}
+
+.modal-background {
+    position: fixed;
+    inset: 0;
+    display: none;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(0,0,0,0.2);
+    &.active {
+        display: flex;
+    }
+}
+
+.modal {
+    min-width: 40rem;
+    width: 50%;
+    background: var(--secondary-color) linear-gradient(180deg, rgba(255,255,255,0.2) 0%, rgba(0, 0, 0, 0.2) 80%, rgba(0,0,0,0.2) 100%);
+    border-radius: 1rem;
+}
+
+.modal-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    padding: 1rem;
+    background-color: var(--primary-color);
+    border-bottom: 0.5rem solid rgba(0,0,0,0.2);
+    border-radius: 1rem 1rem 0 0;
+}
+
+.close-modal-button {
+    background: none;
+    border: none;
+    font-size: 1rem;
+    font-weight: bold;
+    cursor: pointer;
+    &:hover {
+        scale: 1.1;
+    }
+}
+
+.modal-main {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1rem;
+    padding: 1rem;
+}
+
+.modal .type {
+    --color: var(--type-color);
+    width: 8rem;
+    text-decoration: none;
+    &:hover {
+        filter: brightness(0.9);
+    }
 }
