--- a/style/main.css
+++ b/style/main.css
@@ -160,13 +160,6 @@ body {
     }
 }
 
-.to-include .type {
-    visibility: hidden;
-    &.active {
-        visibility: visible;
-    }
-}
-
 .selector .type:hover {
     cursor: pointer;
     scale: 1.1;
@@ -190,6 +183,7 @@ body {
     width: 50%;
     background: var(--secondary-color) linear-gradient(180deg, rgba(255,255,255,0.2) 0%, rgba(0, 0, 0, 0.2) 80%, rgba(0,0,0,0.2) 100%);
     border-radius: 1rem;
+    box-shadow: 0rem 0.75rem 0 0 rgba(0, 0, 0, 0.2);
 }
 
 .modal-header {
@@ -213,17 +207,23 @@ body {
     }
 }
 
-.modal-main {
+.types-container.to-include {
+    min-height: 6rem;
     display: flex;
+    justify-content: flex-start;
     flex-wrap: wrap;
     gap: 1rem;
     padding: 1rem;
 }
 
-.modal .type {
+.to-include .type {
     --color: var(--type-color);
+    display: none;
     width: 8rem;
     text-decoration: none;
+    &.active {
+        display: block;
+    }
     &:hover {
         filter: brightness(0.9);
     }
