--- a/style/main.css
+++ b/style/main.css
@@ -5,6 +5,7 @@
 
 :root {
     --white: rgb(224, 224, 224);
+    --black: rgb(36, 36, 36);
     --primary-color: rgb(238, 64, 53);
     --secondary-color: rgb(104, 104, 104);
     --bottom-color: rgb(236, 236, 236);
@@ -144,12 +145,14 @@ body {
 .type {
     --color: var(--secondary-color);
     --border-color: rgb(59, 59, 59);
+    --text-color: var(--white);
     width: 35%;
     display: flex;
     justify-content: center;
     align-items: center;
     padding: 0.25rem 2rem;
     background: var(--color) var(--gradient);
+    color: var(--white);
     border: 1px solid var(--border-color);
     border-radius: 100rem;
     box-shadow: 0 0.25rem 0 0 rgba(0,0,0,0.2);
@@ -158,6 +161,7 @@ body {
     text-transform: capitalize;
     &.active {
         --color: var(--type-color);
+        color: var(--text-color)
     }
 }
 
