--- a/style/main.css
+++ b/style/main.css
@@ -20,7 +20,8 @@
 }
 
 body {
-    /* overflow-y: hidden; */
+    width: 100%;
+    height: 100vh;
     background: rgb(68, 68, 68);
     background-attachment: fixed;
     font-family: 'pokemon classic', Arial, Helvetica, sans-serif;
@@ -58,7 +59,7 @@ body {
 }
 
 .white-part {
-    height: 3vh;
+    height: 2vh;
     background: var(--bottom-color) var(--gradient);
     border-radius: 50rem;
     transform: translateY(50%)
@@ -185,6 +186,7 @@ body {
 
 .modal {
     min-width: 40rem;
+    max-width: 90vw;
     width: 50%;
     background: var(--secondary-color) var(--gradient);
     border-radius: 1rem;
@@ -261,5 +263,29 @@ body {
     }
     &:hover {
         filter: brightness(0.9);
+    }
+}
+
+@media (max-width: 767px) {
+    .type {
+        width: 70%;
+    }
+
+    .column-title-container {
+        position: relative;
+    }
+
+    .button {
+        position: absolute;
+        top: 0.5rem;
+        right: 0.5rem;
+    }
+
+    .modal {
+        min-width: 90vw;
+    }
+
+    .types-container.to-include {
+        justify-content: space-evenly;
     }
 }
